--- a/_docs/text/04previous_solutions.tex
+++ b/_docs/text/04previous_solutions.tex
@@ -18,7 +18,7 @@ Nevýhodou tohoto riešenia je, že samotný editor je vložený formou iframe w
 
 \section{Figma}
 
-Figma je profesionálny grafický editor s možnosťou kolaboratívnej práce viacerých používateľov. Je určený predovšetkým pre používateľov zaoberajúcich sa grafickým návrhom mobilných webových alebo desktopových aplikácií. Jeho hlavnou výhodou je intuitívne ovládanie, realtime komunikácia medzi spolupracujúcimi používateľmi a bohatá funkcionalita. 
+Figma je profesionálny grafický editor s možnosťou kolaboratívnej práce viacerých používateľov. Je určený predovšetkým pre ľudí zaoberajúcich sa grafickým návrhom mobilných, webových alebo desktopových aplikácií. Jeho hlavnou výhodou je intuitívne ovládanie, real-time komunikácia medzi spolupracujúcimi používateľmi a bohatá funkcionalita. 
 
 Keďže sa však jedná o samostatný webovú aplikáciu nieje možné ju implementovať do MediaWiki systému.
 
@@ -26,5 +26,16 @@ Keďže sa však jedná o samostatný webovú aplikáciu nieje možné ju implem
 	\centerline{\includegraphics[width=1\textwidth]{images/figma}}
 	\caption[Editor Figma]{Prostredie kolaboratívneho editora Figma}
 	\label{obr:Figma}
+\end{figure}
+\FloatBarrier
+
+\section{Draw.IO}
+\textit{Draw.IO} je pomerne známy editor, určený na kolaboratívnu tvorbu vektorovej počítačovej grafiky. Primárne je používaný na tvorbu diagramov, 
+
+
+\begin{figure}[h]
+	\centerline{\includegraphics[width=1\textwidth]{images/drawio}}
+	\caption[Editor Draw.IO]{Prostredie kolaboratívneho editora Draw.IO}
+	\label{obr:DrawIO}
 \end{figure}
 \FloatBarrier
