--- a/_docs/text/05proposal.tex
+++ b/_docs/text/05proposal.tex
@@ -1,3 +1,3 @@
 \chapter{Návrh modelu}\label{chap:proposal}
 
-...
+V tejto kapitole sa zameriame na návrh modelu všetkých častí aplikácie, definujeme si požiadavky na ich funkcionalitu a popíšeme.......niečo popíšeme...
