--- a/_docs/text/references.bib
+++ b/_docs/text/references.bib
@@ -39,6 +39,22 @@
 	
 	}
 }
+@Inbook{Wang2013,
+	author="Wang, Vanessa
+	and Salim, Frank
+	and Moskovits, Peter",
+	title="The WebSocket Protocol",
+	bookTitle="The Definitive Guide to HTML5 WebSocket",
+	year="2013",
+	publisher="Apress",
+	address="Berkeley, CA",
+	pages="33--60",
+	abstract="WebSocket is a network protocol that defines how servers and clients communicate over the Web. Protocols are agreed-upon rules for communication. The suite of protocols that comprise the Internet is published by the IETF, the Internet Engineering Task Force. The IETF publishes Requests for Comments, called RFCs, which precisely specify protocols, including RFC 6455: The WebSocket Protocol. RFC 6455 was published in December 2011 and contains the exact rules that must be followed when implementing a WebSocket client or server.",
+	isbn="978-1-4302-4741-8",
+	doi="10.1007/978-1-4302-4741-8_3",
+	url="https://doi.org/10.1007/978-1-4302-4741-8_3"
+}
+
 
 @ARTICLE{doi:10.1109/MIC.2010.145,
 	author = {S. Tilkov and S. Vinoski},
