--- a/_docs/text/00main.tex
+++ b/_docs/text/00main.tex
@@ -28,7 +28,7 @@
 \setstretch{1.5}
 %\renewcommand\baselinestretch{1.5} % riadkovanie jeden a pol
 
-\input 00listings.tex
+\input listings.tex
 
 
 % pekne pokope definujeme potrebne udaje
@@ -99,10 +99,12 @@
 
 \noindent
 \begin{minipage}{\textwidth}
-\begin{center}
-\textbf{\mfuniversity \\\mffaculty}
-\end{center}
+	\begin{center}
+		\textbf{\mfuniversity \\
+			\mffaculty}
+	\end{center}
 \end{minipage}
+
 
 \vfill
 \begin{figure}[!hbt]
@@ -191,18 +193,18 @@ Keywords: keywords, en, ...
 
 
 % treba este prejst dokument ci je kod spravne formatovany
-\input 00base.tex
+\input base.tex
 
 \mainmatter
 
-\input 01intro.tex
-\input 02motivation.tex
-\input 03issues_overview.tex
-\input 04previous_solutions.tex
-\input 05proposal.tex
-\input 06implementation.tex
-\input 07results.tex
-\input 08conclusion.tex
+\input intro.tex
+\input motivation.tex
+\input issuesoverview.tex
+\input previoussolutions.tex
+\input proposal.tex
+\input implementation.tex
+\input results.tex
+\input conclusion.tex
 
 \backmatter
 
